reproduction_error.txt
Traceback (most recent call last):
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 577, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endblock'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\kakio\eduitit\reproduce_500.py", line 14, in <module>
    response = saju_view(request)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django_ratelimit\decorators.py", line 27, in _wrapped
    return fn(request, *args, **kw)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django_ratelimit\decorators.py", line 27, in _wrapped
    return fn(request, *args, **kw)
  File "C:\Users\kakio\eduitit\fortune\views.py", line 240, in saju_view
    return render(request, 'fortune/saju_form.html', {
        'form': form,
    ...<10 lines>...
        'kakao_js_key': settings.KAKAO_JS_KEY,
    })
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\loader_tags.py", line 235, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\defaulttags.py", line 994, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 579, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kakio\AppData\Roaming\Python\Python313\site-packages\django\template\base.py", line 634, in invalid_block_tag
    raise self.error(
    ...<8 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Template: C:\Users\kakio\eduitit\fortune\templates\fortune\saju_form.html, Invalid block tag on line 1319: 'endblock', expected 'elif', 'else' or 'endif'. Did you forget to register or load this tag?
